@@ -402,7 +402,7 @@ class GraphCycleError(BzrNewError):
         self.graph = graph
 
 class NotConflicted(BzrNewError):
-    """File %(filename) is not conflicted."""
+    """File %(filename)s is not conflicted."""
     def __init__(self, filename):
         BzrNewError.__init__(self)
         self.filename = filename
